<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">
        <ImageView
            android:id="@+id/imgInsertFilm"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY" />

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/field_title"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/titleInsertFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp" />

        <!-- Ano -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/field_year"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/yearInsertFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp" />

        <!-- Genero -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/field_genre"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/genreInsertFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp" />

        <!-- Diretor -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/field_director"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/directorInsertFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp" />

        <!-- Atores -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/field_actors"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/actorsInsertFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp" />

        <!-- Descricao -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/field_plot"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/plotInsertFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>